is-libzip-sys/src/bindings.rs

extern "C" {
    pub fn zip_error_set(
        arg1: *mut zip_error_t,
        arg2: ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn zip_error_strerror(arg1: *mut zip_error_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_error_system_type(arg1: *const zip_error_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_to_data(
        arg1: *const zip_error_t,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_fclose(arg1: *mut zip_file_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_fdopen(
        arg1: ::std::os::raw::c_int,
        arg2: ::std::os::raw::c_int,
        arg3: *mut ::std::os::raw::c_int,
    ) -> *mut zip_t;
}
extern "C" {
    pub fn zip_file_add(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: *mut zip_source_t,
        arg4: zip_flags_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_file_attributes_init(arg1: *mut zip_file_attributes_t);
}
extern "C" {
    pub fn zip_file_error_clear(arg1: *mut zip_file_t);
}
extern "C" {
    pub fn zip_file_extra_field_delete(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_extra_field_delete_by_id(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_uint16_t,
        arg5: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_extra_field_set(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_uint16_t,
        arg5: *const zip_uint8_t,
        arg6: zip_uint16_t,
        arg7: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_extra_fields_count(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
    ) -> zip_int16_t;
}
extern "C" {
    pub fn zip_file_extra_fields_count_by_id(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_flags_t,
    ) -> zip_int16_t;
}
extern "C" {
    pub fn zip_file_extra_field_get(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: *mut zip_uint16_t,
        arg5: *mut zip_uint16_t,
        arg6: zip_flags_t,
    ) -> *const zip_uint8_t;
}
extern "C" {
    pub fn zip_file_extra_field_get_by_id(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_uint16_t,
        arg5: *mut zip_uint16_t,
        arg6: zip_flags_t,
    ) -> *const zip_uint8_t;
}
extern "C" {
    pub fn zip_file_get_comment(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *mut zip_uint32_t,
        arg4: zip_flags_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_file_get_error(arg1: *mut zip_file_t) -> *mut zip_error_t;
}
extern "C" {
    pub fn zip_file_get_external_attributes(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
        arg4: *mut zip_uint8_t,
        arg5: *mut zip_uint32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_rename(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *const ::std::os::raw::c_char,
        arg4: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_replace(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *mut zip_source_t,
        arg4: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_comment(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *const ::std::os::raw::c_char,
        arg4: zip_uint16_t,
        arg5: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_dostime(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: zip_uint16_t,
        arg5: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_encryption(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_uint16_t,
        arg4: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_external_attributes(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
        arg4: zip_uint8_t,
        arg5: zip_uint32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_set_mtime(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: time_t,
        arg4: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_strerror(arg1: *mut zip_file_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_fopen(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
    ) -> *mut zip_file_t;
}
extern "C" {
    pub fn zip_fopen_encrypted(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
        arg4: *const ::std::os::raw::c_char,
    ) -> *mut zip_file_t;
}
extern "C" {
    pub fn zip_fopen_index(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
    ) -> *mut zip_file_t;
}
extern "C" {
    pub fn zip_fopen_index_encrypted(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
        arg4: *const ::std::os::raw::c_char,
    ) -> *mut zip_file_t;
}
extern "C" {
    pub fn zip_fread(
        arg1: *mut zip_file_t,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_fseek(
        arg1: *mut zip_file_t,
        arg2: zip_int64_t,
        arg3: ::std::os::raw::c_int,
    ) -> zip_int8_t;
}
extern "C" {
    pub fn zip_ftell(arg1: *mut zip_file_t) -> zip_int64_t;
}
extern "C" {
    pub fn zip_get_archive_comment(
        arg1: *mut zip_t,
        arg2: *mut ::std::os::raw::c_int,
        arg3: zip_flags_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_get_archive_flag(
        arg1: *mut zip_t,
        arg2: zip_flags_t,
        arg3: zip_flags_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_get_name(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_flags_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_get_num_entries(arg1: *mut zip_t, arg2: zip_flags_t) -> zip_int64_t;
}
extern "C" {
    pub fn zip_libzip_version() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_name_locate(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_open(
        arg1: *const ::std::os::raw::c_char,
        arg2: ::std::os::raw::c_int,
        arg3: *mut ::std::os::raw::c_int,
    ) -> *mut zip_t;
}
extern "C" {
    pub fn zip_open_from_source(
        arg1: *mut zip_source_t,
        arg2: ::std::os::raw::c_int,
        arg3: *mut zip_error_t,
    ) -> *mut zip_t;
}
extern "C" {
    pub fn zip_register_progress_callback_with_state(
        arg1: *mut zip_t,
        arg2: f64,
        arg3: zip_progress_callback,
        arg4: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        arg5: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_register_cancel_callback_with_state(
        arg1: *mut zip_t,
        arg2: zip_cancel_callback,
        arg3: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
        arg4: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_archive_comment(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_uint16_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_archive_flag(
        arg1: *mut zip_t,
        arg2: zip_flags_t,
        arg3: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_default_password(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_file_compression(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: zip_int32_t,
        arg4: zip_uint32_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_begin_write(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_begin_write_cloning(
        arg1: *mut zip_source_t,
        arg2: zip_uint64_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_buffer(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_void,
        arg3: zip_uint64_t,
        arg4: ::std::os::raw::c_int,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_buffer_create(
        arg1: *const ::std::os::raw::c_void,
        arg2: zip_uint64_t,
        arg3: ::std::os::raw::c_int,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_buffer_fragment(
        arg1: *mut zip_t,
        arg2: *const zip_buffer_fragment_t,
        arg3: zip_uint64_t,
        arg4: ::std::os::raw::c_int,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_buffer_fragment_create(
        arg1: *const zip_buffer_fragment_t,
        arg2: zip_uint64_t,
        arg3: ::std::os::raw::c_int,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_close(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_commit_write(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_error(arg1: *mut zip_source_t) -> *mut zip_error_t;
}
extern "C" {
    pub fn zip_source_file(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_uint64_t,
        arg4: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_file_create(
        arg1: *const ::std::os::raw::c_char,
        arg2: zip_uint64_t,
        arg3: zip_int64_t,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_filep(
        arg1: *mut zip_t,
        arg2: *mut FILE,
        arg3: zip_uint64_t,
        arg4: zip_int64_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_filep_create(
        arg1: *mut FILE,
        arg2: zip_uint64_t,
        arg3: zip_int64_t,
        arg4: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_free(arg1: *mut zip_source_t);
}
extern "C" {
    pub fn zip_source_function(
        arg1: *mut zip_t,
        arg2: zip_source_callback,
        arg3: *mut ::std::os::raw::c_void,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_function_create(
        arg1: zip_source_callback,
        arg2: *mut ::std::os::raw::c_void,
        arg3: *mut zip_error_t,
    ) -> *mut zip_source_t;
}
extern "C" {
    pub fn zip_source_get_file_attributes(
        arg1: *mut zip_source_t,
        arg2: *mut zip_file_attributes_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_is_deleted(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_keep(arg1: *mut zip_source_t);
}
extern "C" {
    pub fn zip_source_make_command_bitmap(arg1: zip_source_cmd_t, ...) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_open(arg1: *mut zip_source_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_source_read(
        arg1: *mut zip_source_t,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_source_rollback_write(arg1: *mut zip_source_t);
}
